--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Sketch</title>
-
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
 
     <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <!-- <script src="libraries/p5.sound.min.js"></script> -->
+
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
     <script src="allpossstructs.js"></script>
+    <script src="drawing.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
