--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>All Possible Weave Structures</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
 
@@ -15,6 +15,8 @@
   </head>
 
   <body>
+    <div id="topbar"></div>
+    <div id="canvas"></div>
     <script src="allpossstructs.js"></script>
     <script src="drawing.js"></script>
     <script src="sketch.js"></script>
