--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
 
-    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.js"></script>
     <!-- <script src="libraries/p5.sound.min.js"></script> -->
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,7 +18,7 @@
     <div id="topbar"></div>
     <div id="canvas"></div>
     <script src="allpossstructs.js"></script>
-    <script src="drawing.js"></script>
+    <script src="draw-structlist.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
