don't mess around too much with styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   </head>
 
   <body>
-    <div id="topbar"></div>
+    <div id="topbar">
+      <h1>All Possible Weave Structures</h1>
+
+      <p>
+        Woven structures can be represented as repeating patterns of black & white squares. Given an n x n grid of squares, how many of these are valid weave structures? How many of these are unique?
+      </p>
+    </div>
     <div id="canvas"></div>
     <script src="allpossstructs.js"></script>
     <script src="draw-structlist.js"></script>
